--- a/index.html
+++ b/index.html
@@ -1,34 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title></title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title><!-- TODO: put your title here --></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <!-- Your custom styles go here -->
 </head>
 <body>
-    <h1>Coffee!</h1>
 
-    <form>
-        <label for="roast-selection"></label>
-        <select id="roast-selection">
-            <option>light</option>
-            <option>medium</option>
-            <option>dark</option>
-        </select>
-        <input id="submit" type="submit" />
-    </form>
 
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>NAME</th>
-                <th>ROAST</th>
-            </tr>
-        </thead>
-        <tbody id="coffees"></tbody>
-    </table>
+    <!--<form>-->
+        <!--<label for="roast-selection"></label>-->
+        <!--<select id="roast-selection">-->
+            <!--<option>light</option>-->
+            <!--<option>medium</option>-->
+            <!--<option>dark</option>-->
+        <!--</select>-->
+        <!--<input id="submit" type="submit" />-->
+    <!--</form>-->
+
+    <!--<table>-->
+        <!--<thead>-->
+            <!--<tr>-->
+                <!--<th>ID</th>-->
+                <!--<th>NAME</th>-->
+                <!--<th>ROAST</th>-->
+            <!--</tr>-->
+        <!--</thead>-->
+        <!--<tbody id="coffees"></tbody>-->
+    <!--</table>-->
+
+
+   <div class="container">
+    <div class="row">
+        <div class="col-12">
+        <h1 class="Header">Coffee!</h1>
+            <hr>
+        </div>
+
+    </div>
+       <!-- div for rows-->
+    <div class="row">
+
+        <div class="col-3"></div>
+        <div class="col-3"></div>
+        <div class="col-6">
+
+            <form >
+             <p>Roast</p>
+            <select class=""></select>
+                <p>Coffee Name</p>
+                <input type="text" name="FirstName" value=""><br>
+                <button type="button" class="btn btn-primary btn-lg btn-block">Submit</button>
+            </form>
+
+        </div>
+        </div>
+   </div>
 
     <script src="main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- Your custom JS goes here -->
 </body>
 </html>
