--- a/index.html
+++ b/index.html
@@ -3,60 +3,52 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title><!-- TODO: put your title here --></title>
+    <title>Order Coffee</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-    <!-- Your custom styles go here -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 
-    <!--<form>-->
-        <!--<label for="roast-selection"></label>-->
-        <!--<select id="roast-selection">-->
-            <!--<option>light</option>-->
-            <!--<option>medium</option>-->
-            <!--<option>dark</option>-->
-        <!--</select>-->
-        <!--<input id="submit" type="submit" />-->
-    <!--</form>-->
 
-    <!--<table>-->
-        <!--<thead>-->
-            <!--<tr>-->
-                <!--<th>ID</th>-->
-                <!--<th>NAME</th>-->
-                <!--<th>ROAST</th>-->
-            <!--</tr>-->
-        <!--</thead>-->
-        <!--<tbody id="coffees"></tbody>-->
-    <!--</table>-->
 
 
    <div class="container">
-    <div class="row">
-        <div class="col-12">
-        <h1 class="Header">Coffee!</h1>
-            <hr>
-        </div>
+       <!-- Header -->
+       <div class="row">
+           <div class="col-12">
+               <h1 class="Header">Coffee!</h1>
+               <hr>
+           </div>
+       </div>
 
-    </div>
-       <!-- div for rows-->
-    <div class="row">
 
-        <div class="col-3"></div>
-        <div class="col-3"></div>
-        <div class="col-6">
-
-            <form >
-             <p>Roast</p>
-            <select class=""></select>
-                <p>Coffee Name</p>
-                <input type="text" name="FirstName" value=""><br>
-                <button type="button" class="btn btn-primary btn-lg btn-block">Submit</button>
-            </form>
-
-        </div>
-        </div>
+       <div class="row">
+           <!-- List of Coffee -->
+           <div class="col-6">
+                <table>
+                    <tbody id="coffees"></tbody>
+                </table>
+           </div>
+           <!-- Form for search/input -->
+           <div class="col-6">
+               <form>
+                    <p>Roast</p>
+                        <label for="roast-selection"></label>
+                        <select id="roast-selection">
+                            <option>all</option>
+                            <option>light</option>
+                            <option>medium</option>
+                            <option>dark</option>
+                        </select>
+                    <p>Coffee Name</p>
+                        <input type="text" name="FirstName" value=""><br>
+                    <input id="submit" type="submit" />
+                    <hr>
+                    <h2>Add a Coffee</h2>
+               </form>
+           </div>
+       </div>
    </div>
 
     <script src="main.js"></script>
