--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                 </table>
            </div>
            <!-- Form for search/input -->
-           <div class="col-6">
+
+           <div class="col-6 userchoise">
                <form>
                     <p>Roast</p>
                         <label for="roast-selection"></label>
@@ -43,7 +44,7 @@
                         </select>
                     <p>Coffee Name</p>
                         <input type="text" name="FirstName" value=""><br>
-                    <input id="submit" type="submit"/>
+                    <input id="submit" type="submit" class="bg-primary"/>
                     <hr>
                     <h2>Add a Coffee</h2>
                </form>
@@ -56,5 +57,26 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- Your custom JS goes here -->
+
+
+<script>
+
+    function locatingCoffe(cafes, letra) {
+
+        var arreglocoffe=[];
+
+        cafes.forEach(function (value) {
+            if(value.name.indexOf(letra!=-1)){
+
+                arreglocoffe.push(value);
+            }
+        });
+        console.log(arreglocoffe);
+    }
+
+
+    locatingCoffe(coffees,"Es");
+</script>
+
 </body>
 </html>
