--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <option>dark</option>
                         </select>
                     <p>Coffee Name</p>
-                        <input type="text" name="FirstName" value=""><br>
+                        <input type="text" id="coffeeSearch" name="FirstName" value=""><br>
                     <input id="submit" type="submit" class="bg-primary"/>
                     <hr>
                     <h2>Add a Coffee</h2>
