--- a/index.html
+++ b/index.html
@@ -46,11 +46,27 @@
                         <input type="text" id="coffeeSearch" name="FirstName" value=""><br>
                     <input id="submit" type="submit" class="bg-primary"/>
                     <hr>
-                    <h2>Add a Coffee</h2>
+
                </form>
+               <!-- new div-->
+               <form>
+                   <h1>Add a new Coffee</h1>
+                   <label for="roast-selection"></label>
+                   <select id="add-cofee">
+                       <option>all</option>
+                       <option>light</option>
+                       <option>medium</option>
+                       <option>dark</option>
+                   </select>
+                   <p>Coffee Name</p>
+                   <input type="text" id="coffeeSearch" name="FirstName" value=""><br>
+                   <input id="submit" type="submit" class="bg-primary"/>
+
+               </form>
+
            </div>
        </div>
-   </div>
+
 
     <script src="main.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
