Reversed the display order of the coffees

--- a/index.html
+++ b/index.html
@@ -52,18 +52,16 @@
                <form>
                    <h1>Add a new Coffee</h1>
                    <label for="roast-selection"></label>
-                   <select id="add-cofee">
+                   <select id="add-coffee">
                        <option>all</option>
                        <option>light</option>
                        <option>medium</option>
                        <option>dark</option>
                    </select>
                    <p>Coffee Name</p>
-                   <input type="text" id="coffeeSearch" name="FirstName" value=""><br>
-                   <input id="submit" type="submit" class="bg-primary"/>
-
+                   <input type="text" id="newName" name="FirstName" value=""><br>
+                   <input id="new-coffee" type="submit" class="bg-primary"/>
                </form>
-
            </div>
        </div>
 
