Working on function to add coffee

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                    </select>
                    <p>Coffee Name</p>
                    <input type="text" id="newName" name="FirstName" value=""><br>
-                   <input id="new-coffee" type="submit" class="bg-primary"/>
+                   <input id="new-coffee" type="submit" class="bg-primary" onclick="addCoffee()"/>
                </form>
            </div>
        </div>
