Fixed autorefresh bug

--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
 
        <div class="row">
            <!-- List of Coffee -->
-           <div class="col-6">
-                <table>
-                    <tbody id="coffees"></tbody>
-                </table>
+           <div class="col-6" id="coffees">
+
+
            </div>
            <!-- Form for search/input -->
 
@@ -60,7 +59,7 @@
                    </select>
                    <p>Coffee Name</p>
                    <input type="text" id="newName" name="FirstName" value=""><br>
-                   <input id="new-coffee" type="submit" class="bg-primary" onclick="addCoffee()"/>
+                   <input id="new-coffee" type="submit" class="bg-primary""/>
                </form>
            </div>
        </div>
