Feature: some design added, fonts, image ...

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Order Coffee</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Pacifico');
+        @import url('https://fonts.googleapis.com/css?family=Amaranth:400i');
+    </style>
 </head>
 <body>
 
@@ -16,9 +20,11 @@
    <div class="container">
        <!-- Header -->
        <div class="row">
-           <div class="col-12">
-               <h1 class="Header">Coffee!</h1>
-               <hr>
+           <div class="jumbotron jumbotron-fluid fondo">
+               <div class="container pale ">
+                   <h1 class="display-4 text-dark">San Antonio Cafe</h1>
+
+               </div>
            </div>
        </div>
 
@@ -43,13 +49,13 @@
                         </select>
                     <p>Coffee Name</p>
                         <input type="text" id="coffeeSearch" name="FirstName" value=""><br>
-                    <input id="submit" type="submit" class="bg-primary"/>
+                    <input id="submit" type="submit" class="boton"/>
                     <hr>
 
                </form>
                <!-- new div-->
                <form>
-                   <h1>Add a new Coffee</h1>
+                   <h2>Add a new Coffee</h2>
                    <label for="roast-selection"></label>
                    <select id="add-coffee">
                        <option>all</option>
@@ -59,7 +65,7 @@
                    </select>
                    <p>Coffee Name</p>
                    <input type="text" id="newName" name="FirstName" value=""><br>
-                   <input id="new-coffee" type="submit" class="bg-primary""/>
+                   <input id="new-coffee" type="submit" class="boton"/>
                </form>
            </div>
        </div>
