simplified/added some html

--- a/index.html
+++ b/index.html
@@ -42,29 +42,31 @@
                     <p>Roast</p>
                         <label for="roast-selection"></label>
                         <select id="roast-selection">
+                            <option>Select a Roast</option>
                             <option>all</option>
                             <option>light</option>
                             <option>medium</option>
                             <option>dark</option>
                         </select>
                     <p>Coffee Name</p>
-                        <input type="text" id="coffeeSearch" name="FirstName" value=""><br>
+                        <input type="text" id="coffeeSearch" name="FirstName" placeholder="Search for a coffee" value=""><br>
                     <input id="submit" type="submit" class="boton"/>
                     <hr>
 
                </form>
-               <!-- new div-->
+               <!-- Custom Coffee-->
                <form>
                    <h2>Add a new Coffee</h2>
                    <label for="roast-selection"></label>
                    <select id="add-coffee">
+                       <option>Select a Roast</option>
                        <option>all</option>
                        <option>light</option>
                        <option>medium</option>
                        <option>dark</option>
                    </select>
                    <p>Coffee Name</p>
-                   <input type="text" id="newName" name="FirstName" value=""><br>
+                   <input type="text" id="newName" name="FirstName" placeholder="Add a new coffee to our menu" value=""><br>
                    <input id="new-coffee" type="submit" class="boton"/>
                </form>
            </div>
