cleaned up code, fixed spelling errors, removed unused code

--- a/index.html
+++ b/index.html
@@ -27,17 +27,13 @@
                </div>
            </div>
        </div>
-
-
+       <!-- main body-->
        <div class="row">
            <!-- List of Coffee -->
            <div class="col-6" id="coffees">
-
-
            </div>
            <!-- Form for search/input -->
-
-           <div class="col-6 userchoise">
+           <div class="col-6 userchoice">
                <form>
                     <p>Roast</p>
                         <label for="roast-selection"></label>
@@ -52,7 +48,6 @@
                         <input type="text" id="coffeeSearch" name="FirstName" placeholder="Search for a coffee" value=""><br>
                     <input id="submit" type="submit" class="boton"/>
                     <hr>
-
                </form>
                <!-- Custom Coffee-->
                <form>
@@ -71,6 +66,7 @@
                </form>
            </div>
        </div>
+   </div>
 
 
     <script src="main.js"></script>
