Added css to matching elements

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </select>
                     <p>Coffee Name</p>
                         <input type="text" id="coffeeSearch" name="FirstName" placeholder="Search for a coffee" value=""><br>
-                    <input id="submit" type="submit" class="boton"/>
+                    <input id="submit" type="submit" class="button"/>
                     <hr>
                </form>
                <!-- Custom Coffee-->
@@ -62,7 +62,7 @@
                    </select>
                    <p>Coffee Name</p>
                    <input type="text" id="newName" name="FirstName" placeholder="Add a new coffee to our menu" value=""><br>
-                   <input id="new-coffee" type="submit" class="boton"/>
+                   <input id="new-coffee" type="submit" class="button"/>
                </form>
            </div>
        </div>
